Brainfuck.Antlr/Brainfuck/BrainfuckParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammars/BrainfuckOptimized.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


using System.Text;
using Antlr4.Runtime;
using Antlr4.Runtime.Tree;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class BrainfuckOptimizedParser : Parser {
	public const int
		NEXT=1, PREV=2, ADD=3, SUB=4, PRINT=5, READ=6, LOOP=7, ELOOP=8, WS=9;
	public const int
		RULE_analyze = 0, RULE_expr = 1, RULE_next = 2, RULE_prev = 3, RULE_add = 4, 
		RULE_sub = 5, RULE_print = 6, RULE_read = 7, RULE_sloop = 8, RULE_eloop = 9, 
		RULE_reset_value = 10, RULE_loop = 11, RULE_seq_inc = 12, RULE_seq_dec = 13;
	public static readonly string[] ruleNames = {
		"analyze", "expr", "next", "prev", "add", "sub", "print", "read", "sloop", 
		"eloop", "reset_value", "loop", "seq_inc", "seq_dec"
	};

	private static readonly string[] _LiteralNames = {
		null, "'>'", "'<'", "'+'", "'-'", "'.'", "','", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NEXT", "PREV", "ADD", "SUB", "PRINT", "READ", "LOOP", "ELOOP", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BrainfuckOptimized.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public BrainfuckOptimizedParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class AnalyzeContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(BrainfuckOptimizedParser.Eof, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public AnalyzeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_analyze; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterAnalyze(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitAnalyze(this);
		}
	}

	[RuleVersion(0)]
	public AnalyzeContext analyze() {
		AnalyzeContext _localctx = new AnalyzeContext(Context, State);
		EnterRule(_localctx, 0, RULE_analyze);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEXT) | (1L << PREV) | (1L << ADD) | (1L << SUB) | (1L << PRINT) | (1L << READ) | (1L << LOOP))) != 0)) {
				{
				{
				State = 28; expr();
				}
				}
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 34; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public NextContext next() {
			return GetRuleContext<NextContext>(0);
		}
		public PrevContext prev() {
			return GetRuleContext<PrevContext>(0);
		}
		public Seq_incContext seq_inc() {
			return GetRuleContext<Seq_incContext>(0);
		}
		public Seq_decContext seq_dec() {
			return GetRuleContext<Seq_decContext>(0);
		}
		public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		public ReadContext read() {
			return GetRuleContext<ReadContext>(0);
		}
		public Reset_valueContext reset_value() {
			return GetRuleContext<Reset_valueContext>(0);
		}
		public LoopContext loop() {
			return GetRuleContext<LoopContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 2, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 36; next();
				}
				break;
			case 2:
				{
				State = 37; prev();
				}
				break;
			case 3:
				{
				State = 38; seq_inc();
				}
				break;
			case 4:
				{
				State = 39; seq_dec();
				}
				break;
			case 5:
				{
				State = 40; print();
				}
				break;
			case 6:
				{
				State = 41; read();
				}
				break;
			case 7:
				{
				State = 42; reset_value();
				}
				break;
			case 8:
				{
				State = 43; loop();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NextContext : ParserRuleContext {
		public ITerminalNode NEXT() { return GetToken(BrainfuckOptimizedParser.NEXT, 0); }
		public NextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_next; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterNext(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitNext(this);
		}
	}

	[RuleVersion(0)]
	public NextContext next() {
		NextContext _localctx = new NextContext(Context, State);
		EnterRule(_localctx, 4, RULE_next);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; Match(NEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrevContext : ParserRuleContext {
		public ITerminalNode PREV() { return GetToken(BrainfuckOptimizedParser.PREV, 0); }
		public PrevContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prev; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterPrev(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitPrev(this);
		}
	}

	[RuleVersion(0)]
	public PrevContext prev() {
		PrevContext _localctx = new PrevContext(Context, State);
		EnterRule(_localctx, 6, RULE_prev);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(PREV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AddContext : ParserRuleContext {
		public ITerminalNode ADD() { return GetToken(BrainfuckOptimizedParser.ADD, 0); }
		public AddContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterAdd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitAdd(this);
		}
	}

	[RuleVersion(0)]
	public AddContext add() {
		AddContext _localctx = new AddContext(Context, State);
		EnterRule(_localctx, 8, RULE_add);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(ADD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubContext : ParserRuleContext {
		public ITerminalNode SUB() { return GetToken(BrainfuckOptimizedParser.SUB, 0); }
		public SubContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sub; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitSub(this);
		}
	}

	[RuleVersion(0)]
	public SubContext sub() {
		SubContext _localctx = new SubContext(Context, State);
		EnterRule(_localctx, 10, RULE_sub);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(SUB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		public ITerminalNode PRINT() { return GetToken(BrainfuckOptimizedParser.PRINT, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterPrint(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitPrint(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 12, RULE_print);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; Match(PRINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReadContext : ParserRuleContext {
		public ITerminalNode READ() { return GetToken(BrainfuckOptimizedParser.READ, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_read; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterRead(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitRead(this);
		}
	}

	[RuleVersion(0)]
	public ReadContext read() {
		ReadContext _localctx = new ReadContext(Context, State);
		EnterRule(_localctx, 14, RULE_read);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(READ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SloopContext : ParserRuleContext {
		public ITerminalNode LOOP() { return GetToken(BrainfuckOptimizedParser.LOOP, 0); }
		public SloopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sloop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterSloop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitSloop(this);
		}
	}

	[RuleVersion(0)]
	public SloopContext sloop() {
		SloopContext _localctx = new SloopContext(Context, State);
		EnterRule(_localctx, 16, RULE_sloop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; Match(LOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EloopContext : ParserRuleContext {
		public ITerminalNode ELOOP() { return GetToken(BrainfuckOptimizedParser.ELOOP, 0); }
		public EloopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eloop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterEloop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitEloop(this);
		}
	}

	[RuleVersion(0)]
	public EloopContext eloop() {
		EloopContext _localctx = new EloopContext(Context, State);
		EnterRule(_localctx, 18, RULE_eloop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; Match(ELOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Reset_valueContext : ParserRuleContext {
		public SloopContext sloop() {
			return GetRuleContext<SloopContext>(0);
		}
		public SubContext sub() {
			return GetRuleContext<SubContext>(0);
		}
		public EloopContext eloop() {
			return GetRuleContext<EloopContext>(0);
		}
		public Reset_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reset_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterReset_value(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitReset_value(this);
		}
	}

	[RuleVersion(0)]
	public Reset_valueContext reset_value() {
		Reset_valueContext _localctx = new Reset_valueContext(Context, State);
		EnterRule(_localctx, 20, RULE_reset_value);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; sloop();
			State = 63; sub();
			State = 64; eloop();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopContext : ParserRuleContext {
		public SloopContext sloop() {
			return GetRuleContext<SloopContext>(0);
		}
		public EloopContext eloop() {
			return GetRuleContext<EloopContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public LoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterLoop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitLoop(this);
		}
	}

	[RuleVersion(0)]
	public LoopContext loop() {
		LoopContext _localctx = new LoopContext(Context, State);
		EnterRule(_localctx, 22, RULE_loop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; sloop();
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEXT) | (1L << PREV) | (1L << ADD) | (1L << SUB) | (1L << PRINT) | (1L << READ) | (1L << LOOP))) != 0)) {
				{
				{
				State = 67; expr();
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 73; eloop();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Seq_incContext : ParserRuleContext {
		public AddContext[] add() {
			return GetRuleContexts<AddContext>();
		}
		public AddContext add(int i) {
			return GetRuleContext<AddContext>(i);
		}
		public Seq_incContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_seq_inc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterSeq_inc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitSeq_inc(this);
		}
	}

	[RuleVersion(0)]
	public Seq_incContext seq_inc() {
		Seq_incContext _localctx = new Seq_incContext(Context, State);
		EnterRule(_localctx, 24, RULE_seq_inc);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 75; add();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 78;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Seq_decContext : ParserRuleContext {
		public SubContext[] sub() {
			return GetRuleContexts<SubContext>();
		}
		public SubContext sub(int i) {
			return GetRuleContext<SubContext>(i);
		}
		public Seq_decContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_seq_dec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.EnterSeq_dec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBrainfuckOptimizedListener typedListener = listener as IBrainfuckOptimizedListener;
			if (typedListener != null) typedListener.ExitSeq_dec(this);
		}
	}

	[RuleVersion(0)]
	public Seq_decContext seq_dec() {
		Seq_decContext _localctx = new Seq_decContext(Context, State);
		EnterRule(_localctx, 26, RULE_seq_dec);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 80; sub();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 83;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	private static string _serializedATN = _serializeATN();

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
